--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,10 +33,12 @@ requirements:
   host:
     - r-base
     - r-rcpp
+    - r-geometries
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
     - r-rcpp
+    - r-geometries
 
 test:
   commands:
@@ -45,11 +47,12 @@ test:
 
 about:
   home: https://dcooley.github.io/sfheaders/
-  license: GPL-3
+  license: MIT
   summary: Converts between R and Simple Feature 'sf' objects, without depending on the Simple Feature library. Conversion functions are available at both the R level, and through 'Rcpp'.
-  license_family: GPL3
+  license_family: MIT
   license_file:
-    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/MIT
+    - LICENSE
 
 extra:
   recipe-maintainers:
